fix/ dark mode bug fix on configuration page and store sub categories

--- a/enatega-multivendor-admin/app/(localized)/global.css
+++ b/enatega-multivendor-admin/app/(localized)/global.css
@@ -915,6 +915,7 @@ body {
 
 .dark .p-fieldset {
   border: 1px dashed var(--dark-600);
+  background-color: var(--dark-900);
 }
 
 .p-fieldset-legend {
